feat(协议支持加载): 优化Jar协议加载逻辑, 解决文件路径解析问题并增强错误日志